Removed java 11 method